Added images for employees and equipment
