# RentalManager.Infrastructure/Commands/EmployeeCommands/UpdateEmployee.cs
@@ -1,19 +1,23 @@
 ﻿using System.ComponentModel;
 using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Http;
+using RentalManager.Infrastructure.DTO;
 
 namespace RentalManager.Infrastructure.Commands.EmployeeCommands;
 
 public class UpdateEmployee
 {
     [Required]
-    [RegularExpression(@"^[a-zA-ZąćęłńóśźżĄĘŁŃÓŚŹŻ]*$", ErrorMessage = "Invalid name")]
-    [StringLength(100)]
     [DefaultValue("John")]
     public string Name { get; set; } = null!;
 
     [Required]
-    [RegularExpression(@"^[a-zA-ZąćęłńóśźżĄĘŁŃÓŚŹŻ]*$", ErrorMessage = "Invalid surname")]
-    [StringLength(100)]
     [DefaultValue("Kowalski")]
     public string Surname { get; set; } = null!;
+    
+    public IFormFile? Image { get; set; }
+    
+    [Required]
+    [DefaultValue(GenderDto.Man)]
+    public GenderDto Gender { get; set; }
 }
