# RentalManager.Infrastructure/DTO/GenderDto.cs
@@ -1,0 +1,13 @@
+﻿using System.ComponentModel;
+
+namespace RentalManager.Infrastructure.DTO;
+
+public enum GenderDto
+{
+    [Description("Man")]
+    Man,
+    [Description("Woman")]
+    Woman,
+    [Description("OtherPreferNotSay")]
+    OtherPreferNotSay
+}
