# RentalManager.WebAPI/Controllers/EmployeeController.cs
@@ -1,4 +1,5 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using System.Diagnostics;
+using Microsoft.AspNetCore.Mvc;
 using RentalManager.Infrastructure.Commands.EmployeeCommands;
 using RentalManager.Infrastructure.DTO;
 using RentalManager.Infrastructure.Services;
@@ -10,15 +11,16 @@ namespace RentalManager.WebAPI.Controllers;
 public class EmployeeController : Controller
 {
     private readonly IEmployeeService _employeeService;
-
+    private static Random random;
     public EmployeeController(IEmployeeService employeeService)
     {
         _employeeService = employeeService;
+        random = new Random();
     }
 
     [ProducesResponseType(typeof(EmployeeDto), 200)]
     [HttpPost]
-    public async Task<IActionResult> AddEmployee([FromBody] CreateEmployee createEmployee)
+    public async Task<IActionResult> AddEmployee([FromForm] CreateEmployee createEmployee)
     {
         var result = await _employeeService.AddAsync(createEmployee);
 
@@ -53,10 +55,29 @@ public class EmployeeController : Controller
 
     [ProducesResponseType(typeof(EmployeeDto), 200)]
     [HttpPut("{id:int}")]
-    public async Task<IActionResult> UpdateEmployee([FromBody] UpdateEmployee updateEmployee, int id)
+    public async Task<IActionResult> UpdateEmployee([FromForm] UpdateEmployee updateEmployee, int id)
     {
         var result = await _employeeService.UpdateAsync(updateEmployee, id);
 
         return Json(result);
+    }
+
+    [ProducesResponseType(typeof(File), 200)]
+    [Route("/Employee/Image/{id}")]
+    [HttpGet]
+    public async Task<IActionResult?> GetEmployeeImage(int id)
+    {
+        var employeeDto = await _employeeService.GetAsync(id);
+
+        if (employeeDto.Image is null)
+        {
+            if (employeeDto.Gender == GenderDto.Man)
+            {
+                return File("~/DefaultUserImageMan.png", "image/png");
+            }
+            return File("~/DefaultUserImageWoman.png", "image/png");
+        }
+
+        return File(employeeDto.Image, "image/jpeg");
     }
 }
